--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -2,10 +2,10 @@ l_english:
 
  STATE_1:0 "코르스"
  STATE_2:0 "라티움"
- STATE_3:0 "미틀란트"
+ STATE_3:0 "미텔란트"
  STATE_4:0 "니더외스터라이히"
- STATE_5:0 "동프로이센"
- STATE_6:0 "플랑드르"
+ STATE_5:0 "오스트프로이센"
+ STATE_6:0 "플란데런"
  STATE_7:0 "서부 네덜란드"
  STATE_8:0 "룩셈부르크"
  STATE_9:0 "체히"
@@ -28,20 +28,20 @@ l_english:
  STATE_26:0 "오베르뉴"
  STATE_27:0 "부르고뉴"
  STATE_28:0 "엘자스로트링겐"
- STATE_29:0 "프랑스플렁드흐"
+ STATE_29:0 "프란스플란데런"
  STATE_30:0 "루아르"
  STATE_31:0 "가론강"
  STATE_32:0 "론"
  STATE_33:0 "플렌드라루아"
- STATE_34:0 "왈롱"
+ STATE_34:0 "발로니에"
  STATE_35:0 "남부 네덜란드"
  STATE_36:0 "북부 네덜란드"
  STATE_37:0 "셸란"
  STATE_38:0 "노를란드"
- STATE_39:0 "남티롤"
+ STATE_39:0 "쥐트티롤"
  STATE_40:0 "바르나울"
  STATE_41:0 "마드리드"
- STATE_42:0 "모젤란드"
+ STATE_42:0 "모젤란트"
  STATE_43:0 "북부 헝가리"
  STATE_44:0 "티라나"
  STATE_45:1 "보이보디나"
@@ -50,7 +50,7 @@ l_english:
  STATE_48:0 "소피아"
  STATE_49:0 "앙카라"
  STATE_50:0 "뷔르템베르크"
- STATE_51:0 "외스터라인란트"
+ STATE_51:0 "오스트라인란트"
  STATE_52:0 "오버바이에른"
  STATE_53:0 "니더바이에른"
  STATE_54:0 "프랑켄"
@@ -65,23 +65,23 @@ l_english:
  STATE_63:0 "힌터포메른"
  STATE_64:0 "브란덴부르크"
  STATE_65:0 "작센"
- STATE_66:0 "니더실레시아"
+ STATE_66:0 "니더슐레지엔"
  STATE_67:0 "오버슐레지엔"
  STATE_68:0 "노이마르크"
  STATE_69:0 "도이치뵈멘"
  STATE_70:0 "니트라"
- STATE_71:0 "세프스"
+ STATE_71:0 "세페시"
  STATE_72:1 "북부 샨"
- STATE_73:0 "마라무레슈"
+ STATE_73:0 "마러머로시"
  STATE_74:0 "도이치메렌"
- STATE_75:0 "모라비아"
- STATE_76:0 "북부 에르데이"
+ STATE_75:0 "모라바"
+ STATE_76:0 "에저크에르데이"
  STATE_77:0 "실리스트라"
  STATE_78:0 "바사라비아"
  STATE_79:0 "몰도바"
  STATE_80:0 "부코비나"
  STATE_81:0 "올테니아"
- STATE_82:1 "바나트"
+ STATE_82:1 "반샤그"
  STATE_83:1 "쾨뢰슈비데크"
  STATE_84:0 "에르데이"
  STATE_85:0 "단치히"
@@ -101,7 +101,7 @@ l_english:
  STATE_99:0 "유틀란트"
  STATE_100:0 "아이슬란드"
  STATE_101:0 "그린란드"
- STATE_102:0 "크레인"
+ STATE_102:0 "크라인"
  STATE_103:0 "리카"
  STATE_104:0 "보스나"
  STATE_105:0 "츠르나고라"
@@ -121,7 +121,7 @@ l_english:
  STATE_119:0 "얼스터"
  STATE_120:0 "하일랜드"
  STATE_121:0 "로디언"
- STATE_122:0 "웨일즈"
+ STATE_122:0 "웨일스"
  STATE_123:0 "콘월"
  STATE_124:0 "고틀란드"
  STATE_125:0 "이스트 앵글리아"
@@ -162,7 +162,7 @@ l_english:
  STATE_160:0 "베네토"
  STATE_161:0 "로마냐"
  STATE_162:0 "투스카나"
- STATE_163:1 "달마티아"
+ STATE_163:1 "달마치야"
  STATE_164:0 "멘테세아달라르"
  STATE_165:0 "카탈루냐"
  STATE_166:0 "아라곤"
@@ -406,7 +406,7 @@ l_english:
  STATE_404:0 "키라간다"
  STATE_405:0 "부하라"
  STATE_406:0 "구르예프"
- STATE_407:0 "오랄"
+ STATE_407:0 "우랄스크"
  STATE_408:0 "블라디보스토크"
  STATE_409:0 "하바롭스크"
  STATE_410:0 "시스탄"
@@ -429,8 +429,8 @@ l_english:
  STATE_427:0 "하이데라바드"
  STATE_428:0 "구자라트"
  STATE_429:0 "봄베이"
- STATE_430:0 "동벵골"
- STATE_431:0 "서벵골"
+ STATE_430:0 "동부 벵골"
+ STATE_431:0 "서부 벵골"
  STATE_432:0 "아삼"
  STATE_433:0 "라자스탄"
  STATE_434:0 "마니푸르"
@@ -454,7 +454,7 @@ l_english:
  STATE_452:0 "메르사마트루"
  STATE_453:0 "시나"
  STATE_454:0 "쿠뒤시스 세리프"
- STATE_455:0 ""
+ STATE_455:0 "마 안"
  STATE_456:0 "아스완"
  STATE_457:0 "동부 사막"
  STATE_458:0 "튀니스"
@@ -524,9 +524,9 @@ l_english:
  STATE_522:0 "호주 서부"
  STATE_523:0 "파푸아"
  STATE_524:0 "타이호쿠"
- STATE_525:0 "남조선"
+ STATE_525:0 "미마미초센"
  STATE_526:0 "오키나와"
- STATE_527:0 "북조선"
+ STATE_527:0 "기타초센"
  STATE_528:0 "규슈"
  STATE_529:0 "주고쿠"
  STATE_530:0 "시코쿠"
@@ -536,17 +536,17 @@ l_english:
  STATE_534:0 "호쿠리쿠"
  STATE_535:0 "고신에쓰"
  STATE_536:0 "홋카이도"
- STATE_537:0 "카라푸토"
+ STATE_537:0 "카라후토"
  STATE_538:0 "에콰도리얼콩고"
  STATE_539:0 "가봉"
  STATE_540:0 "앙골라"
- STATE_541:0 "남서아프리카"
+ STATE_541:0 "쥐트베스트아프리카"
  STATE_542:0 "베추아날랜드"
  STATE_543:0 "마다가스카르"
  STATE_544:0 "잠베지아"
  STATE_545:0 "로디지아"
  STATE_546:0 "탕가니카"
- STATE_547:0 "케냐"
+ STATE_547:0 "케니아"
  STATE_548:0 "우간다"
  STATE_549:0 "수단"
  STATE_550:0 "에리트레아"
@@ -602,7 +602,7 @@ l_english:
  STATE_600:0 "장시"
  STATE_601:0 "시캉"
  STATE_602:0 "후난"
- STATE_603:0 "서 구이저우"
+ STATE_603:0 "서부 구이저우"
  STATE_604:0 "칭하이"
  STATE_605:0 "쓰촨"
  STATE_606:0 "안후이"
@@ -644,7 +644,7 @@ l_english:
  STATE_642:0 "피닉스 섬"
  STATE_643:0 "한스만 제도"
  STATE_644:0 "북동시베리아"
- STATE_645:0 "이오지마"
+ STATE_645:0 "이오 섬"
  STATE_646:0 "마리아나 제도"
  STATE_647:0 "팔라우 섬"
  STATE_648:0 "미나미토리 섬"
@@ -654,16 +654,16 @@ l_english:
  STATE_652:0 "오렌부르크"
  STATE_653:0 "예카테린부르크"
  STATE_654:0 "울랄라"
- STATE_655:0 "북 카라푸토"
+ STATE_655:0 "북부 카라후토"
  STATE_656:0 "쿠웨이트"
- STATE_657:0 "블라고베시첸스크"
+ STATE_657:0 "블라고베셴스크"
  STATE_658:0 "아부다비"
  STATE_659:0 "아덴"
  STATE_660:0 "적도 아프리카"
  STATE_661:0 "트리불리탄"
  STATE_662:0 "시르테"
  STATE_663:0 "바카"
- STATE_664:0 "게머와 키선"
+ STATE_664:0 "괴뫼르 에시 키시혼트"
  STATE_665:0 "가베스"
  STATE_666:0 "라플란드"
  STATE_667:0 "소네다 열도"
@@ -685,7 +685,7 @@ l_english:
  STATE_683:0 "북부 퀘벡"
  STATE_684:0 "캐롤라인 제도"
  STATE_685:0 "파마나 운하"
- STATE_686:0 "푸에르토 리코"
+ STATE_686:0 "푸에르토리코"
  STATE_687:0 "서 기아나"
  STATE_688:0 "차코보레알"
  STATE_689:0 "자메이카"
@@ -735,7 +735,7 @@ l_english:
  STATE_733:0 "안다만 제도"
  STATE_734:0 "티레니어스 제도"
  STATE_735:0 "사부아"
- STATE_736:0 "퀴스트란트"
+ STATE_736:0 "퀴스텐란트"
  STATE_737:0 "비스마르크 군도"
  STATE_738:0 "아루 제도"
  STATE_739:0 "하이다과이"
@@ -773,31 +773,31 @@ l_english:
  STATE_771:0 "바르나"
  STATE_772:0 "도브루자"
  STATE_773:0 "콘스탄티니예"
- STATE_774:0 "북간수"
+ STATE_774:0 "북부 간쑤"
  STATE_775:0 "슈타이어마르크"
- STATE_776:0 "서프로이센"
- STATE_777:0 "카토비체"
+ STATE_776:0 "베스트프로이센"
+ STATE_777:0 "카토비츠"
  STATE_778:0 "옘틀란드"
  STATE_779:0 "난치히"
  STATE_780:0 "바덴"
  STATE_781:0 "베스트라인란트"
- STATE_782:0 "노드슐레스비히"
+ STATE_782:0 "노르트슐레스비히"
  STATE_783:0 "트렌티노"
- STATE_784:0 "부르겐란트"
+ STATE_784:0 "외르비데크"
  STATE_785:0 "플라투 로레인"
  STATE_786:0 "도이치쥐트메렌" 
  STATE_787:0 "키즐랴르"
  STATE_788:0 "남부 간쑤"
- STATE_789:1 "셰클러랜드"
+ STATE_789:1 "세케이푈드"
  STATE_790:1 "라킨"
  STATE_791:0 "모힐리우포딜스키"
  STATE_792:0 "리우네"
  STATE_793:1 "아스투리아스"
  STATE_794:0 "스리옘"
- STATE_795:0 "트리에스테"
+ STATE_795:0 "트리스트"
  STATE_796:0 "북부 뉴욕"
- STATE_797:0 "샌 프란시스코"
- STATE_798:0 "로스 엔젤레스"
+ STATE_797:0 "샌프란시스코"
+ STATE_798:0 "로스엔젤레스"
  STATE_799:0 "남부 산시"
  STATE_800:0 "루펑"
  STATE_801:0 "산터우"
@@ -806,16 +806,16 @@ l_english:
  STATE_804:0 "북부 호라산"
  STATE_805:0 "틀렘센"
  STATE_806:0 "기니"
- STATE_807:0 "엘픈바인쿠스트"
+ STATE_807:0 "엘펜바인퀴스테"
  STATE_808:0 "오트볼타"
  STATE_809:0 "니제르"
  STATE_810:0 "우스카메노고르스크"
  STATE_811:0 "미누신스크"
  STATE_812:0 "바스라"
- STATE_813:0 "남 보르베크랜드"
+ STATE_813:0 "쥐트포어벡슬란트"
  STATE_814:0 "우라타라칸드"
  STATE_815:0 "고라크푸르"
- STATE_816:0 "동 구이저우"
+ STATE_816:0 "동부 구이저우"
  STATE_817:0 "루시용"
  STATE_818:0 "관타나모 만"
  STATE_819:0 "케르퀴크"
@@ -864,23 +864,23 @@ l_english:
  STATE_862:0 "수단 사막"
  STATE_863:0 "남서수오미"
  STATE_864:0 "사보"
- STATE_865:0 "웨스트카렐리야"
- STATE_866:0 "동 네덜란드"
+ STATE_865:0 "렌시카리알라"
+ STATE_866:0 "동부 네덜란드"
  STATE_867:0 "트리반코어"
  STATE_868:0 "콜하푸르"
  STATE_869:0 "르완다"
  STATE_870:0 "부룬디"
- STATE_871:0 "니아살랜드"
+ STATE_871:0 "니야살란트"
  STATE_872:0 "타크나"
  STATE_873:0 "타라파카"
  STATE_874:0 "아타카마"
- STATE_875:0 "웨스트바나"
+ STATE_875:0 "뉴거트반샤그"
  STATE_876:0 "다호메"
- STATE_877:0 "토고랜드"
- STATE_878:0 "하우살란드"
+ STATE_877:0 "토골란트"
+ STATE_878:0 "하우잘란트"
  STATE_879:0 "카탕가"
  STATE_880:0 "드빈스크"
- STATE_881:0 "젠트랄콩고"
+ STATE_881:0 "첸트랄콩고"
  STATE_882:0 "케냐부리"
  STATE_883:0 "헤이룽장"
  STATE_884:0 "싱안"
@@ -891,7 +891,7 @@ l_english:
  STATE_889:0 "비사카파트남"
  STATE_890:0 "심라"
  STATE_891:0 "라호르"
- STATE_892:0 "주바랜드"
+ STATE_892:0 "유발란트"
  STATE_893:0 "나그푸르"
  STATE_894:0 "산타카타리나"
  STATE_895:0 "이스피리투산투"
@@ -952,40 +952,40 @@ l_english:
  STATE_950:0 "이냠바느-가자"
  STATE_951:0 "마빙가"
  STATE_952:0 "아다마와"
- STATE_953:0 "테켈랜드"
+ STATE_953:0 "테켈란트"
  STATE_954:0 "테트"
- STATE_955:0 "동 보르벡슬란트"
- STATE_956:0 "북 보르벡슬란트"
- STATE_957:0 "서 보르벡슬란트"
- STATE_958:0 "오스트바르셀로랜드"
+ STATE_955:0 "오스트포어벡슬란트"
+ STATE_956:0 "노르트포어벡슬란트"
+ STATE_957:0 "베스트바로첼란트"
+ STATE_958:0 "오스트바로첼란트"
  STATE_959:0 "룬다-초크웨 오리엔탈"
  STATE_960:0 "키루나"
  STATE_961:0 "다니칼리아"
  STATE_962:0 "마루아"
- STATE_963:0 "아칸랜드"
+ STATE_963:0 "아칸란트"
  STATE_964:0 "암볼란드"
  STATE_965:0 "다르에스살람"
  STATE_966:0 "힌털란드"
  STATE_967:0 "모리타니 사막"
  STATE_968:0 "아드라르"
- STATE_969:0 "그라븐브루흐"
+ STATE_969:0 "그라벤브루흐"
  STATE_970:0 "몸바사"
- STATE_971:0 "동 뉴카메룬"
- STATE_972:0 "동남 뉴카메룬"
- STATE_973:0 "남 뉴카메룬"
+ STATE_971:0 "오스트노이카메룬"
+ STATE_972:0 "쥐트오스트노이카메룬"
+ STATE_973:0 "쥐트노이카메룬"
  STATE_974:0 "우방기"
  STATE_975:0 "도이치차드"
  STATE_976:0 "카사이"
  STATE_977:0 "키부"
 STATE_978:0 "림뷔흐르"
-STATE_979:0 "네덜란드령 플랑드르"
+STATE_979:0 "제이우스플란데런"
 STATE_980:0 "플랑드르 로마네"
 STATE_981:0 "나지란"
 STATE_982:0 "아시르"
 STATE_983:0 "브르타뉴"
 STATE_984:0 "피레네"
 STATE_985:0 "캔버라"
-STATE_986:0 "북퀸즐랜드"
+STATE_986:0 "북 퀸즐랜드"
 STATE_987:0 "킴벌리"
 STATE_988:0 "필바라"
 STATE_989:0 "살로니카"
