--- a/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
@@ -8,7 +8,7 @@ deal_with_mongolia:0 "몽골과의 거래"
 deal_with_china:0 "중국과의 거래"
 china_united_tie:0 "통합된 중국"
 tian_reserach_inst:0 "재무 조사"
-qie_pesants_join_our_army:0 "청나라 농민들이 우리군에 합류함."
+qie_pesants_join_our_army:0 "청나라 농민이 군에 합류"
 
 ### Parties ### (Shangqing Parties)
 SQI_totalist_party:0 "CPP"
