--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -198,8 +198,8 @@ AST_restore_order_2:0 "AFM이 질서를 회복하다"
 AST_restore_order_2_desc:0 "힘든 길이었지만 이재 혼돈은 끝나야만 합니다. 제살 깍아먹기 식의 데모와 혼돈은 더이상 없습니다. 전진하는 길은 AFM과 함께 가는 길이며 국가는 그 진실을 직시해야 합니다. "
 AST_social_reforms:0 "새로운 사회 개혁"
 AST_social_reforms_desc:0 "옛 제국주의자들의 '민주'정부는 진정한 평등을 달성하지도 추구하지도 않았습니다. 여성과 소수자들은 나란히 서서 나머지 동포과 함께 우리 모두의 미래를 건설하는 것을 돕고 있습니다. 우리는 진정으로 자유로운 오스트랄라시아가 어떻게 되어야 할지에 대해 논의할 것입니다."
-AST_white_australasia:0 "백인만의 오스트랄라시아는 끝났다"
-AST_white_australasia_desc:0 "백인만의 오스트랄라시아 정책은 1901년 이민 금지법과 함께 시작되었지만 거기서 그치지 않고 특히 비 유럽계가 이민오기 힘들게 만들기 위해 제정된 법을 포함합니다. 어떤 사람들은 좋아하지 않을지라도 이 법들을 폐지할 때가 왔습니다. 오스트랄라시아는 성장할 필요가 있고 자유로운 사회 역시 그렇게 되어야만 합니다."
+AST_white_australasia:0 "백호주의는 끝났다"
+AST_white_australasia_desc:0 "백호주의 정책은 1901년 이민 금지법과 함께 시작되었지만 거기서 그치지 않고 특히 비 유럽계가 이민오기 힘들게 만들기 위해 제정된 법을 포함합니다. 어떤 사람들은 좋아하지 않을지라도 이 법들을 폐지할 때가 왔습니다. 오스트랄라시아는 성장할 필요가 있고 자유로운 사회 역시 그렇게 되어야만 합니다."
 AST_monarchist_officers:0 "왕당파 장교단"
 AST_monarchist_officers_desc:0 "군대에는 왕정에 충성하는 장교들이 가득하고 그들을 직위 해제할 때가 왔습니다. 이는 힘든 과도기가 될 테지만 우리는 오스트랄라시아에게 헌신하는, 오스트랄라시아에게만 헌신하는 군대가 필요하지 다모클레스의 검과 같이 우리 지도자들의 머리 위에 매달려 영국의 방해나 쿠데타의 위험이 남아있는 그런 군대는 필요치 않습니다."
 AST_fortress_australasia:0 "오스트랄라시아 요새화"
@@ -481,53 +481,53 @@ austral.4.t:0 "노동당의 특별 회의"
 austral.4.d:0 "오늘 오스트랄라시아 노동당은 5년 전 축출당한 뉴사우스웨일스의 전 주 총리 잭 랑이 당에 재가입하려하자 시드니에서 특별 회의를 소집했습니다. 랑은 원래 지도부에 불복해 당을 떠났고 그 자신의 당을 창당했습니다. 현재의 뉴사우스웨일스 주 총독 필립 게임이 정부에서 그를 해임하자 그의 인기는 추락했고 당에 다시 가입하고자 했습니다. 강력한 연설가이자 뼛속까지 대중주의자인 랑의 재가입은 그를 진정한 사회주의 이론에는 적대적인 사회 연방주의자로 간주하는 노조 활동가의 대다수를 차지하는 노동당 내의 좌파 사이에서 실망을 야기했습니다. 임박한 선거를 고려해볼 때 오스트랄라시아 노동당은 격동의 때로 향하고 있는 것처럼 보입니다."
 austral.4.a:0 "좌파들은 저들끼리나 티격태격 거리게 하자!!"
 austral.5.t:0 "오스트랄라시안 수비대"
-austral.5.d:0 "Originally formed in 1925, the Australasian Guard is a staunchly nationalist and jingoistic movement, which traces its roots back to the paramilitary organisation the 'League of National Security' comprised of former servicemen returning from the Weltkrieg, who helped put down the 1923 Melbourne Commune. In the years following the Melbourne Uprising, the Guard has continued to support the government, with many supporters joining the expanded security forces available to the Governor-General and assisting in suppressing left-wing activities. The coming return to democratic rule has caused an upset amongst the far right, however, who fear the re-emergence of the long-suppressed Labour movement and that the Nationalist Party, divided as it is, will be unable to maintain the status quo. Due to these factors, the Guard's leader, Eric Campbell, has decided that it will take part in the elections as the Centre Party. Despite their not-inconsiderable levels of popular support, at present it is unsure what impact they will have."
+austral.5.d:0 "1925년에 형성된 오스트랄라시아 수비대는 충실한 국수주의자이자 호전적 운동으로 그 연원은 세계대전의 귀환자들로 구성된 1923년의 멜버른 코뮌의 진압을 도운 준군사조직인 ‘국가 방위 연맹’입니다. 멜버른 반란의 다음해, 수비대는 정부를 계속해서 도왔고 많은 지지자들이 가입해 총독이 방위군을 확장할 수 있게 했고 좌익 활동가들을 탄압하는 것을 도왔습니다. 하지만 다가오는 민주적 통치의 귀환은 오랫동안 억압되어왔던 노동운동의 재등장을 두려워하는 극우들과 분열되었기에 현 상황의 유지가 불가능하게 된 국민당 사이에서 혼란을 야기했습니다. 이러한 요소들로 인해 수비대의 지도자, 에릭 캠벨은 선거에 중앙당으로서 참가할 것을 결심했습니다. 그들의 낮지 않은 대중의 지지에도 불구하고 현재 상황으로는 그들이 가져올 영향은 확실하지 않습니다."
 austral.5.a:0 "좋지 않군..."
-austral.6.t:0 "빅토리아 숲에 화재가 일어나다"
-austral.6.d:0 "The state of Victoria has been hit by heavy bush fires in the north east and south west. Because of intense heat and drought over the last few years, much of rural Victoria has dried up - leaving plenty of fuel for the flames. The fires at this point are so incredibly intense that the ash and smoke can be seen from New Zealand. Firefighters with the aid of the state government are currently trying to combat the disaster, with the flames already threatening several major cities and causing considerable panic."
+austral.6.t:0 "빅토리아에 들불이 일어나다"
+austral.6.d:0 "빅토리아 주의 북동부와 남동부에서 대규모로 들불이 일어났습니다. 지난 몇 년간의 강한 열기와 가뭄으로 빅토리아의 농촌의 대부분은 바짝 말라서 화염의 연료를 많이 남겨놓았습니다. 이 시점의 불은 믿을 수 없을 만큼 커서 재와 연기는 뉴질랜드에서도 보일 지경입니다. 주정부의 도움을 받은 소방관들은 현재 재앙과 싸우고 있지만 화염은 이미 몇 개의 주요 도시를 위협하고 있고 엄청난 공포를 야기하고 있습니다."
 austral.6.a:0 "맙소사!"
-austral.7.t:0 "Bush Fires Finally Extinguished"
-austral.7.d:0 "The fires in Victoria have finally been extinguished, thanks to the efforts of local fire fighters as well as overdue dense rainfall. This victory has come at the cost of 71 lives, over 1000 homes destroyed, and the burning of almost 135,500 hectares of land. Currently Judge Leonard Stretton has been selected to lead a royal commission into what led to the disastrous fires, though many suspect farmers or graziers in rural areas to be responsible due to their long-standing practice of burning brush to clear new land."
-austral.7.a:0 "Well, at least the worst is over"
-austral.8.t:0 "Ion Idriess' 'The Cattle King'"
-austral.8.d:0 "Leading Australian writer Ion Idriess today published his latest novel, 'The Cattle King'. It follows the life of recently-deceased Sir Sidney Kidman, an entrepreneur and pastoralist who owned or co-owned large areas of land in Australia in his lifetime. Kidman became widely popular due to his support of the government in the Weltkrieg and charitable organisations. The book looks set to be Australasia's best-seller for 1936, and many are drawing parallels between Kidman and the exiled White Rajah, Charles Vyner Brooke, which is sure to boost Brooke's popularity."
-austral.8.a:0 "An Interesting Read!"
-austral.9.t:0 "Australasia Day"
-austral.9.d:0 "Today the nation is celebrating the Confederation of Australasia and, while the confederation was not voluntary - having been initially formed by the British invocation of the Conservation of Resources Act in 1924 - it still has brought many benefits to both Australia and New Zealand, or such is the common belief. Crowds are lining the city streets from one side of the country to the other in order to celebrate the occasion."
-austral.9.a:0 "Advance Australasia Fair!"
-austral.10.t:0 "The [GetYear] Federal Election"
-austral.10.d:0 "The first free elections in over a decade, which many are calling 'Bruce's Election', look set to return a majority for the United Australasia Party. However the Labour and Country parties are campaigning vigourously, while the Nationalists struggle to retain their core vote with the left voting UAP and the right declaring for the Guard's Centre Party. Many are, at least, grateful that Campbell's Centre party seemingly has no chance of actually winning, though it seems likely they will make a good showing."
-austral.10.a:0 "Earl Page and the Country Party"
-austral.10.b:0 "John Curtin and the Australasia Labor Party"
-austral.10.c:0 "Stanley Bruce and the United Australasia Party"
-austral.11.t:0 "The Australasian Guard and the Election"
-austral.11.d:0 "The Australasian Guard has emerged from the election far stronger than when it went in. Eric Campbell's Centre Party, while failing to take many Parliamentary seats, did manage to secure a large percentage of the popular vote, mostly at the expense of the Nationalists. Despite this, the lack of a coherent strategy as well as a hostile media reception were clear hinderances for them."
-austral.11.a:0 "Oh dear!"
-austral.12.t:0 "A New Governor-General?"
-austral.12.d:0 "William Birdwood's tenure as Governor-General saw a vast expansion in powers available to the position, which he used to maintain order in Oceania at the expense of democracy and civil liberties. Birdwood, a British General from the Weltkrieg, was imposed upon Australasia by an Empire fearful of revolt... but times have changed, and the newly-elected government could use this opportunity to replace him with a native Australasian. While this move would be popular with many, others have suggested that an opportunity exists to invite a member of the royal family to assume the role and thus put Australasia more firmly within the sphere of the Empire and our fellow Entente allies."
-austral.12.a:0 "William Birdwood should remain where he is"
-austral.12.b:0 "It is time for an Australasian Governor-General!"
-austral.12.c:0 "We should invite a member of the royal family to hold the post"
-austral.13.t:0 "The ACTU Makes its Move"
-austral.13.d:0 "The Australasian Labor Party National Executive met today in Canberra, after being swept into office in an unexpected result. John Curtin now has to decide which direction to take the party and the nation, however. There is a schism already opening between the different wings of the party. Jack Lang and the moderate right wing of the party are up against the revolutionary left, consolidated around the Australasian Council of Trade Unions. The ACTU wants to seize this opportunity to enact real syndicalist policies throught Australasia, form a republic in memory of the Melbourne Commune, and break from the imperialist Entente. Lang wishes to expel these radicals from the party, maintaining our place in the Empire. Curtin must make a choice: break his party or lead a revolution."
-austral.13.a:0 "Expel the revolutionaries from the party!"
-austral.13.b:0 "The ACTU seizes control! Declare the syndicalist republic!"
-austral.14.t:0 "New Labor Campaigning"
-austral.14.d:0 "There have been a recent upswing in the Labor party's campaign efforts, as they appear to have a great deal more money in the party coffers than previously thought possible. [Root.GetAdjective] police investigators suggest that the money is likely being funneled through the Australasian Council of Trade Unions, sent by the Union of Britain, as an effort to support radicals within the Labor party... though there is no real evidence of that yet."
-austral.14.a:0 "Foreign interference in our elections? Outrageous!"
-austral.20.t:0 "Workers' Organisation and Trade Unions"
-austral.20.d:0 "In the aftermath of the Melbourne Commune and the Revolution of 1925, trade unions were made illegal. While many continued to operate underground alongside the Australasian Labor Party, they were suppressed by the expanded police and military districts as well as by the Australasian Guard. While we may be sceptical of their ideology, the continued draconian enforcement of Birdwood's policies will undoubtedly be an unpopular move, so we must consider whether to legalize these unions and seek a compromise with their leaders."
-austral.20.a:0 "Rescind Birdwood's policies"
-austral.20.b:0 "Trade unions cause trouble - continue the suppression"
-austral.21.t:0 "The Syndicalist March"
-austral.21.d.notlabor:0 "Responding to the election results, which the labor movement claims were rigged against their candidates, radicals supported by the Australasian Council of Trade Unions held an illegal march in several of Australasia's cities today. They are protesting the continued suppression of unions, and several of the marches ended in clashes with both the police and local paramilitary groups. All the marches were successfully dispersed, but leaders have sworn that they will continue to resist the new government, and that without freedom the Australasian Confederation cannot truly call itself a democracy."
-austral.21.d.labor:0 "Responding to their recent ejection from the Labor party's ranks and the new government, radicals supported by the Australasian Council of Trade Unions held an illegal march in several of Australasia's cities today. They are demanding a swift end to union suppression, something Labor party leaders have already promised, and several of the marches ended in clashes with both the police and local paramilitary groups. All the marches were successfully dispersed, but leaders have sworn that they will continue to resist the new government, and that without freedom the Australasian Confederation cannot truly call itself a democracy."
-austral.21.a:0 "They are asking for trouble"
-austral.22.t:0 "The ACTU Campaign"
-austral.22.d:0 "Responding to the government's decision to legalize trade unions, the newly-legitimized ACTU has begun a major push for the next general election. Large crowds have been gathering to hear syndicalist leader Fred Paterson speak, and while pundits don't give the radicals much hope in winning there is a sense of worry regarding Paterson's growing support. Some ministers have expressed reservation of the legalization, calling it a 'dangerous experiment', but for the moment the damage appears to be minimal."
-austral.22.a:0 "We will keep a close eye on this"
-austral.23.t:0 "Unions Protest Suppression"
-austral.23.d:0 "Union supporters have taken to the streets in several major Australasian cities, protesting the government's decision to continue the suppression of the ACTU and its syndicalist allies. The protesters were met with police, and later with Australasian Guard paramilitary groups, and this led to bloody clashes in Melbourne where dozens were reported injured. Maximist leader J.B. Miles has called for continued resistance to the government's anti-union policies, although he drew short of openly calling for armed revolt."
+austral.7.t:0 "들불이 마침내 진화되다"
+austral.7.d:0 "지역 소방관들의 노력과 때늦은 막대한 강우로 빅토리아의 화재가 마침내 진화되었습니다. 이 승리는 71명의 생명, 1000대 이상의 붕괴된 가옥, 거의 135,500헥타르의 토지의 연소를 대가로 한 것이었습니다. 현재 판사 레너드 스트레튼이 끔찍한 화재의 원인이 무엇이었는지에 대한 왕립 위원회로 지명되었으나 많은 이들은 그들의 새로운 땅을 깨끗이 하기위해 다발을 태우는 오래 지속되어온 행위로 농촌 지역의 농부들이나 목축업자들의 책임을 의심하고 있습니다."
+austral.7.a:0 "흠, 최소한 최악은 끝났다."
+austral.8.t:0 "이온 이드리스의 '가축 왕'"
+austral.8.d:0 "주요한 오스트레일리아인 작가인 이온 이드리스가 오늘 그의 최신 소설 ‘가축 왕’을 발매했습니다. 이는 최근에 사망한 일생동안 오스트레일리아 땅의 많은 부분을 소유하거나 공유했던 사업가이자 목축인 시드니 키드먼 경의 삶을 다룹니다. 키드먼은 세계대전 중의 정부에 대한 지원과 자선 기관으로 널리 유명해졌습니다. 그 책은 오스트랄라시아의 1936년의 베스트셀러를 달성할 것으로 보이며 많은 이들이 키드먼과 추방된 백인 라자, 찰스 바이너 브룩을 비교하고 있어 브룩의 인지도를 높일 것이 확실합니다."
+austral.8.a:0 "흥미로운 읽을거리로군!"
+austral.9.t:0 "오스트랄라시아의 날"
+austral.9.d:0 "오늘 전국은 오스트랄라시아의 연합을 기념하고 있습니다. 자의적인 일은 아니었지만 1924년 영국의 자원 보존법의 발효로 처음에 시작된 연합은 오스트레일리아와 뉴질랜드 양 쪽에 많은 이득을 가져왔고 대중 역시 그렇게 생각합니다. 군중들은 그 사건을 기념하기 위해 나라의 이쪽 끝에서 저쪽 끝까지 거리에 줄지어 있습니다."
+austral.9.a:0 "완벽한 오스트랄라시아를 전진시켜라!"
+austral.10.t:0 "[GetYear] 년의 연방 선거"
+austral.10.d:0 "10년이 넘는 시간 동안의 첫 선거로 많은 이들이 이를 ‘브루스의 선거’라고 부르며 오스트랄라시아 연합당이 여당을 차지할 것이라 예측하고 있습니다. 하지만 노동당과 농민당은 활발하게 선거운동을 하고 있고 국수주의자들은 그들의 핵심 투표 층이 좌파는 연합당을 뽑고 우파는 수비대의 중앙당을 뽑으며 어려움을 겪고 있습니다. 최소한 많은 사람들은 캠벨의 중앙당이 그들이 좋은 결과를 내고 있는 것처럼 보이지만 실질적으로 승리의 기회가 없음에 안도하고 있습니다."
+austral.10.a:0 "얼 페이지와 농민당"
+austral.10.b:0 "존 커틴과 오스트랄라시아 노동당"
+austral.10.c:0 "스탠리 브루스와 오스트랄라시아 통합당"
+austral.11.t:0 "오스트랄라시아 수비대와 선거"
+austral.11.d:0 "오스트랄라시아 수비대는 선거에서 그들이 창설되었을 때 보다 더 큰 성과를 거두었습니다. 에릭 캠벨의 중앙당은 많은 의석을 거두지는 못했지만 대부분은 국수주의자들의 몫일 일반 투표에서 많은 비중을 차지했습니다. 그럼에도 불구하고 종합적인 전략의 부족과 미디어의 적대적인 태도는 그들의 명백한 방해물이 되었습니다."
+austral.11.a:0 "오 이런!"
+austral.12.t:0 "새로운 총독?"
+austral.12.d:0 "윌리엄 버드우드의 총독으로서의 종신 재직은 그 위치에서의 권력의 증가를 야기했고 그는 민주주의와 시민의 자유를 희생해 오세아니아에서 질서를 가져왔습니다. 대전기의 영국의 장군이었던 버드우드는 반란을 두려워하던 제국에 의해 오스트랄라시아에 부임되어왔지만… 이제 시대는 변했고 새롭게 선출된 정부는 이 기회에 그를 오스트랄라시아 태생 인사로 교체할 수 있습니다. 이 주장은 많은 사람들에게 인기가 있지만 그렇지 않은 사람들은 왕가의 인물을 초대해 그 직위를 맡기고 오스트랄라시아가 제국의 영향권과 우리의 동료인 협상국 동맹에 더 확고하게 뿌리내릴 기회가 있다고 주장합니다."
+austral.12.a:0 "윌리엄 버드우드는 그의 현재 직위에 남아야 한다."
+austral.12.b:0 "오스트랄라시아인이 총독이 될 시간이다!"
+austral.12.c:0 "우리는 왕가의 인물을 초대해서 그 지위를 수행하게 해야 한다."
+austral.13.t:0 "ACTU가 움직이다"
+austral.13.d:0 "오스트랄라시아 노동당 국가 지도부는 예상 못한 결과로 공직에서 압승하자 오늘 캔버라에서 모였습니다. 존 커틴은 이제 당과 국가가 어떤 방향으로 나아가야 할지 결정해야 합니다. 이미 당의 다른 두 진영 사이에 분열이 있습니다. 잭 랑과 당의 온건 우파는 오스트랄라시안 노동조합 협의회(ACTU)를 중심으로 통합된 혁명적 좌파와 적대하고 있습니다. ACTU는 오스트랄라시아에 진정한 생디칼리즘 정책을 실행하고 멜버른 코뮌의 기억을 되살려 공화국을 형성하며 제국주의자들의 협상국에서 벗어날 기회를 잡기 원합니다. 랑은 이 급진주의자들을 당에서 추방하고 제국에서의 우리의 위치를 고수하기를 원합니다. 커틴은 선택해야만 합니다. 당을 부술지, 혁명을 이끌지."
+austral.13.a:0 "혁명가들을 당에서 추방하라!"
+austral.13.b:0 "ACTU가 통제권을 장악한다! 생디칼리즘 공화국을 선언하라!"
+austral.14.t:0 "새로운 노동 활동"
+austral.14.d:0 "정당 재원에 전에 있었던 것보다 더 많은 돈이 있는 것으로 예상되면서 최근 노동당의 활동이 상승해 있습니다. [Root.GetAdjective] 경찰 조사관들은 그 돈이 브리튼 연방에서 보내져 노동당 내의 급진주의자들을 지원하기 위한 목적으로 오스트랄라시안 노동조합 협의회를 통해 공급되었을 가능성이 있을 것으로 추정하고 있습니다. 아직 실질적인 증거는 없지만 말입니다."
+austral.14.a:0 "우리 선거에 외국이 개입한다고? 어처구니가 없군!"
+austral.20.t:0 "노동자 조직화와 노동 조합"
+austral.20.d:0 "멜버른 코뮌과 1925년 혁명의 후유증으로 노동조합은 불법화 되었습니다. 많은 조직들이 오스트랄라시아 노동당과 함께 지하에서 계속해서 조직해오고 있지만 증원된 경찰과 군사 관할 구역 뿐만 아니라 오스트랄라시아 수비대에 의해 탄압받았습니다. 우리가 그들의 이념에 의심이 많긴 하지만 버드우드의 정책의 가혹한 강제를 지속하는 것은 의심할 여지없이 인기를 떨어트릴 것이므로 우리는 이들을 합법화하고 그들의 지도자들과 타협할 것인가를 고찰해야만 합니다."
+austral.20.a:0 "버드우드의 정책을 취소하라"
+austral.20.b:0 "노동조합은 문제를 일으킨다 ― 탄압을 계속해라"
+austral.21.t:0 "생디칼리스트들의 시위"
+austral.21.d.notlabor:0 "그들의 후보가 조작 당했다고 노동운동가들이 주장하는 선거 결과에 대응해서 오스트랄라시안 노동조합 협의회의 지원을 받는 급진주의자들은 오늘 오스트랄라시아의 몇 개의 도시에서 불법적인 시위를 벌였습니다. 그들은 계속된 조합의 탄압에 저항하고 있으며 얼마간의 시위들은 경찰과 준군사조직 양 쪽과 끝내 충돌했습니다. 모든 시위는 성공적으로 해산되었으나 지도자들은 새 정부에 대해 저항을 지속할 것과 자유가 없는 오스트랄라시아 연방은 참된 민주주의로 불릴 자격이 없다고 단언했습니다."
+austral.21.d.labor:0 "노동당에서의 위치와 신정부에서의 축출에 대응해서 오스트랄라시안 노동조합 협의회의 지원을 받는 급진주의자들은 오늘 오스트랄라시아의 몇 개의 도시에서 불법적인 시위를 벌였습니다. 그들은 노동당 지도부가 이미 약속했던 대로 조속한 조합의 탄압의 종결을 요청하고 있으며 얼마간의 시위들은 경찰과 준군사조직 양 쪽과 끝내 충돌했습니다. 모든 시위는 성공적으로 해산되었으나 지도자들은 새 정부에 대해 저항을 지속할 것과 자유가 없는 오스트랄라시아 연방은 참된 민주주의로 불릴 자격이 없다고 단언했습니다."
+austral.21.a:0 "그들은 재난을 자초하고 있다"
+austral.22.t:0 "ACTU의 운동"
+austral.22.d:0 "노조를 합법화하기로 한 정부의 결정에 반응하여 새롭게 조직된 ACTU가 다음 총 선거를 위한 거대한 운동을 시작했습니다. 많은 군중들이 생디칼리스트 지도자 프레드 패터슨의 연설을 듣기 위해 모였고 전문가들은 급진주의자들이 더 이상의 승리를 기대할 수 없을 것이라고 보았지만 패터슨의 지지가 증가함에 따라 걱정이 되는 감이 있습니다. 어떤 장관들은 이를 ‘위험한 실험’이라 부르며 합법화의 유보를 표명했지만 지금 당장의 피해는 거의 없을 것 같습니다."
+austral.22.a:0 "우리는 여기서 눈을 떼지 않을 것이다."
+austral.23.t:0 "조합이 탄압에 대해 시위하다"
+austral.23.d:0 "조합 지지자들이 오스트랄라시아의 몇 개의 주요 도시의 거리를 점령했고 ACTU와 생디칼리즘 동조자에 대한 탄압을 지속하기로 한 정부의 결정에 대해 시위하고 있습니다. 시위자들은 경찰과, 잠시 후에는 오스트리아 수비대 준군사조직과 만났고 이는 멜버른에서 유혈사태로 번져 12명이 부상을 입었습니다. 맥시미스트 지도자 J.B 마일스는 무장저항을 공개적으로 호소하는 것만은 제외하고 정부의 반 노조 정책에 계속해서 저항할 것을 부르짖었습니다."
 austral.24.t:0 "Miners Clash with Police"
 austral.24.d:0 "The continued suppression of trade unions drew a strong reaction today as miners across Victoria state attempted a walk-out, protesting unsafe conditions which have only become worse over the last decade. While they claimed to have no association with a union, their action was declared unlawful, and several clashes with police ended with the death of a miner by the name of Joseph Grenton. While the walk-out was disbanded, 'Miner Joe' has been elevated to something of a folk hero among the Australasian working class."
 austral.24.a:0 "A dead folk hero, that is"
