--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -53,7 +53,7 @@ RUS_claim_sinkiang:0 "신장 영유권 주장"
 RUS_claim_sinkiang_desc:0 "The Sinkiang region will act excellently as a staging ground for any further military operations in China and the far east. Alternatively, it will act as a first line of defence to whatever operations of the oriental peoples may have planned."
 RUS_intervene_CHI_JAP_war:0 "중일 전쟁 개입"
 RUS_intervene_CHI_JAP_war_desc:0 "With China and Japan at each others throats it's time we stop and ask ourselves; how can we benefit the most from this?"
-RUS_plebiscite_transamur:0 "Plan a Plebiscite in Transamur"
+RUS_plebiscite_transamur:0 "트란스아무르 국민투표 계획"
 RUS_plebiscite_transamur_desc:0 "With the Russian state gaining control over the once disputed Trans-Siberian railroad from Mongolia, commercial contacts have increased massively with the Transamur Republic. The leaders of its influential business community have approached the our government in secret, suggesting that they could probably organise a popular vote to return to Russia."
 RUS_crush_transamur:0 "트란스아무르 영유권 주장"
 RUS_crush_transamur_desc:0 "With the Russian state gaining control over the once disputed Trans-Siberian railroad from Mongolia, commercial contacts have increased massively with the Transamur Republic. The weakened state can now be easily taken with a few divisions of Russian soldiers. Surely the people will greet them with rejoiced cheering!"
@@ -165,46 +165,46 @@ rusfor.10.a:0 "Renounce the claim."
 rusfor.10.b:0 "They had better control the Black Sea well for us."
 rusfor.10.c:0 "Ungrateful Ukrainians! This means war!"
 
-rusfor.11.t:0 "The Russo-Japanese War"
+rusfor.11.t:0 "러일 전쟁"
 rusfor.11.d:0 "Russia and Japan are at war! This could be our chance to extend the rule of our Mongolian nation into Siberia or China, although we would probably need the backing of at least one of the sides in the war to feasibly expand."
-rusfor.11.a:0 "We cannot afford to intervene."
-rusfor.11.b:0 "Attack Russia!"
-rusfor.11.c:0 "Attack Japan!"
-rusfor.11.e:0 "Attack the Qing!"
+rusfor.11.a:0 "개입할 필요가 없다."
+rusfor.11.b:0 "러시아를 공격한다!"
+rusfor.11.c:0 "일본을 공격한다!"
+rusfor.11.e:0 "청나라를 공격한다!"
 
-rusfor.12.t:0 "Mongolia attacks Russia!"
+rusfor.12.t:0 "몽골이 러시아를 공격하다!"
 rusfor.12.d:0 "Baron von Ungern-Sternberg has decided that it is time to join our war against Russia and has attacked Russian border defences in Siberia. Mongolian diplomats have offered to cooperate in our alliance more formally, can we trust them?"
-rusfor.12.a:0 "Add Mongolia to our alliance."
-rusfor.12.b:0 "No, we cannot trust these treacherous Mongolians!"
+rusfor.12.a:0 "몽골을 우리 동맹에 초대하자."
+rusfor.12.b:0 "아냐, 우린 저 열등한 몽골 놈들을 믿을 수 없다!"
 
-rusfor.13.t:0 "Mongolia attacks Japan!"
+rusfor.13.t:0 "몽골이 일본을 공격하다!"
 rusfor.13.d:0 "Baron von Ungern-Sternberg has decided that it is time to join our war against Japan and has attacked Japanese border defences in Manchuria. Mongolian diplomats have offered to cooperate in our alliance more formally, can we trust them?"
-rusfor.13.a:0 "Add Mongolia to our alliance."
-rusfor.13.b:0 "No, we cannot trust these treacherous Mongolians!"
+rusfor.13.a:0 "몽골을 우리 동맹에 초대하자."
+rusfor.13.b:0 "아냐, 우린 저 열등한 몽골 놈들을 믿을 수 없다!"
 
-rusfor.14.t:0 "Russia controls Central Asia"
+rusfor.14.t:0 "러시아가 중앙 러시아를 통제합니다"
 rusfor.14.d:0 "Stability comes back to Central Asia where, since the fall of Tsarist Russia, tribes and hordes were fighting each other. Now our Central Asian border is much more secure and we can strengthen ourselves in Ural."
-rusfor.14.a:0 "Great!"
+rusfor.14.a:0 "좋았어!"
 
-rusfor.15.t:0 "Russia controls Siberia"
+rusfor.15.t:0 "러시아가 시베이아를 통제합니다"
 rusfor.15.d:0 "Stability comes back to Siberia, where barbaric Mongols and the treacherous admiral Kolchak had been trying to drive Russia in chaos. Now our Siberian border is much more secure and we can strengthen ourselves in Siberia."
-rusfor.15.a:0 "Great!"
+rusfor.15.a:0 "좋았어!"
 
-rus_cooperation_canada:0 "Military Cooperation with Canada"
-rus_cooperation_nat_france:0 "Military Cooperation with Nat. France"
+rus_cooperation_canada:0 "캐나다와 군사협력"
+rus_cooperation_nat_france:0 "국민프랑스와 군사협력"
 
-rusfor.16.t:0 "Fate of Belorussia"
+rusfor.16.t:0 "벨로루시의 운명"
 rusfor.16.d:0 "The former Belorussian state is now under our direct military control. We cannot hope to keep the areas of the former state in line for too long, though. Most politicians are calling for the restoration of Belorussia as a buffer state, with the eastern parts of the country directly integrated into Russia. However, nationalists strongly disagree with this kind of solution and instead they demand that Belorussia be permanently integrated into Russia."
-rusfor.16.a:0 "Restore Belorussia's 1936 borders!"
+rusfor.16.a:0 "1936년 벨로루시의 국경을 복원한다!"
 rusfor.16.b:0 "Integrate areas with a Russian majority and restore Belorussia!"
-rusfor.16.c:0 "Integrate Belorussia into Russia!"
+rusfor.16.c:0 "러시아에 벨로루시를 합병시킨다!"
 
-rusfor.17.t:0 "Independence of Belorussia"
+rusfor.17.t:0 "벨로루시의 독립"
 rusfor.17.d:0 "We have decided that it will be in Russia's best interest if an independent Belorussia emerges on the Russian border. How much independence will it really have?"
-rusfor.17.a:0 "Puppet them!"
-rusfor.17.b:0 "Full independence!"
+rusfor.17.a:0 "괴뢰화하자!"
+rusfor.17.b:0 "완전한 독립이다!"
 
-rusfor.18.t:0 "Independent Belarus"
+rusfor.18.t:0 "독립된 벨라루스"
 rusfor.18.d:0 "Belarus is once again independent under Russian supervision."
 rusfor.18.a:0 "Form up the troops!"
 
